@@ -19,7 +19,7 @@
  */
 
 [CCode (array_length=false, array_null_terminated=true)]
-static string[] opt_load;
+static string[] opt_device;
 [CCode (array_length=false, array_null_terminated=true)]
 static string[] opt_ioctl;
 [CCode (array_length=false, array_null_terminated=true)]
@@ -27,11 +27,11 @@ static string[] opt_program;
 static bool opt_version = false;
 
 static const GLib.OptionEntry[] options = {
-    {"load", 'l', 0, OptionArg.FILENAME_ARRAY, ref opt_load,
-     "Load an umockdev-record file into the testbed. Can be specified multiple times.",
+    {"device", 'd', 0, OptionArg.FILENAME_ARRAY, ref opt_device,
+     "Load an umockdev-record device description into the testbed. Can be specified multiple times.",
      "filename"},
     {"ioctl", 'i', 0, OptionArg.FILENAME_ARRAY, ref opt_ioctl,
-     "Load an ioctl record file into the testbed. Can be specified multiple times.",
+     "Load an umockdev-record ioctl dump into the testbed. Can be specified multiple times.",
      "devname=ioctlfilename"},
     {"", 0, 0, OptionArg.STRING_ARRAY, ref opt_program, "", ""},
     {"version", 0, 0, OptionArg.NONE, ref opt_version, "Output version information and exit"},
@@ -65,7 +65,7 @@ main (string[] args)
 
     var testbed = new UMockdev.Testbed ();
 
-    foreach (var path in opt_load) {
+    foreach (var path in opt_device) {
         string record;
         try {
             FileUtils.get_contents (path, out record);
